--- a/app/src/main/res/drawable/fill_form_edit_text.xml
+++ b/app/src/main/res/drawable/fill_form_edit_text.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape>
-            <corners android:radius="10dp"></corners>
+<!--            <corners android:radius="10dp"></corners>-->
             <stroke android:width="1dip" android:color="#707070"/>
         </shape>
     </item>
