--- a/app/src/main/res/layout/acitibity_sign_up_fill_form.xml
+++ b/app/src/main/res/layout/acitibity_sign_up_fill_form.xml
@@ -80,15 +80,9 @@
                         android:layout_marginBottom="10dp"
                         android:text="Color of eyes" />
 
-<!--                    <RadioButton-->
-<!--                        style="@style/radio"-->
-<!--                        android:text="no matter" />-->
-
                     <EditText
                         android:id="@+id/eyes_color"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:background="@drawable/spinner" />
+                        style="@style/fill_form_edit_text" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -104,15 +98,9 @@
                         android:layout_marginBottom="10dp"
                         android:text="Color of hair" />
 
-<!--                    <RadioButton-->
-<!--                        style="@style/radio"-->
-<!--                        android:text="no matter" />-->
-
                     <EditText
                         android:id="@+id/hairs_color"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:background="@drawable/spinner" />
+                        style="@style/fill_form_edit_text" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -128,15 +116,10 @@
                         android:layout_marginBottom="10dp"
                         android:text="Your height" />
 
-<!--                    <RadioButton-->
-<!--                        style="@style/radio"-->
-<!--                        android:text="no matter" />-->
 
                     <EditText
                         android:id="@+id/height"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:background="@drawable/spinner" />
+                        style="@style/fill_form_edit_text"/>
 
                 </LinearLayout>
 
@@ -149,30 +132,19 @@
                     <TextView
                         style="@style/input_label"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
-
-                        android:text="Your height" />
-
-                    <!--                    <RadioButton-->
-                    <!--                        style="@style/radio"-->
-                    <!--                        android:text="no matter" />-->
+                        android:text="Write a little about yourself" />
 
                     <EditText
                         android:id="@+id/aboutUser"
-                        android:layout_width="match_parent"
+                        style="@style/fill_form_edit_text"
                         android:layout_height="150dp"
-                        android:inputType="text|textMultiLine"
-                        android:background="@drawable/spinner" />
+                        android:gravity="top"
+                        android:inputType="text|textMultiLine" />
 
                 </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="40dp"
-                    app:srcCompat="@drawable/profile_image" />
+
 
                 <Button
                     android:id="@+id/confirm_button"
