--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -83,5 +83,12 @@
         <item name="android:layout_marginRight">30dp</item>
     </style>
 
+    <style name="fill_form_edit_text">
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:background">@drawable/fill_form_edit_text</item>
+    </style>
+
 
 </resources>
