--- a/app/src/main/res/layout/acitibity_sign_up_fill_form.xml
+++ b/app/src/main/res/layout/acitibity_sign_up_fill_form.xml
@@ -114,6 +114,24 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
+                        android:text="Your age" />
+
+                    <EditText
+                        android:id="@+id/age"
+                        style="@style/fill_form_edit_text" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="40dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        style="@style/input_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
                         android:text="Your height" />
 
 
