--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -73,7 +73,7 @@
     </LinearLayout>
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/profilePhoto"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/firstInfo"
@@ -84,10 +84,10 @@
         tools:ignore="VectorDrawableCompat" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/about"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView"
+        android:layout_below="@+id/profilePhoto"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:text="В мире есть около 20 миллионов более интересных занятий, чем удаление фона вручную. Благодаря умному ИИ сайта remove.bg вы можете сократить время на редактирование и получить больше удовольствия!"
