--- a/app/src/main/res/layout/fragment_search_nominations.xml
+++ b/app/src/main/res/layout/fragment_search_nominations.xml
@@ -27,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:fontFamily="@font/nunito_semibold"
-                android:text="Elena Elaza"
+                android:text="................."
                 android:textColor="@color/black"
                 android:textSize="33dp" />
 
@@ -47,7 +47,7 @@
                 android:layout_alignParentRight="true"
                 android:fontFamily="@font/nunito_semibold"
                 android:paddingBottom="4dp"
-                android:text="age 24"
+                android:text="......"
                 android:textColor="@color/black"
                 android:textSize="16dp" />
 
@@ -63,7 +63,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="17dp"
         android:adjustViewBounds="true"
-        app:srcCompat="@drawable/image_profile"
+        app:srcCompat="@drawable/depositphotos_134255710_stock_illustration_avatar_vector_male_profile_gray__1_"
         tools:ignore="VectorDrawableCompat" />
 
     <TextView
@@ -71,9 +71,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/profilePhoto"
-        android:layout_centerHorizontal="true"
+        android:layout_alignStart="@+id/profilePhoto"
+        android:layout_alignLeft="@+id/profilePhoto"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="16dp"
-        android:text="В мире есть около 20 миллионов более интересных занятий, чем удаление фона вручную. Благодаря умному ИИ сайта remove.bg вы можете сократить время на редактирование и получить больше удовольствия!"
+        android:gravity="left"
+        android:text="................................................."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -84,6 +88,7 @@
         android:layout_marginTop="20dp">
 
         <ImageButton
+            android:id="@+id/like"
             style="@style/view_nomination_icon"
             app:srcCompat="@drawable/ic_heart"
             tools:ignore="VectorDrawableCompat" />
