--- a/app/src/main/res/layout/acitibity_sign_up_fill_form.xml
+++ b/app/src/main/res/layout/acitibity_sign_up_fill_form.xml
@@ -132,6 +132,66 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
+                        android:text="Facebook profile url" />
+
+
+                    <EditText
+                        android:id="@+id/facebook"
+                        style="@style/fill_form_edit_text"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="40dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        style="@style/input_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:text="Instagram profile url" />
+
+
+                    <EditText
+                        android:id="@+id/instagram"
+                        style="@style/fill_form_edit_text"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="40dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        style="@style/input_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:text="You vk profile url" />
+
+
+                    <EditText
+                        android:id="@+id/vk"
+                        style="@style/fill_form_edit_text"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="40dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        style="@style/input_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
                         android:text="Your height" />
 
 
@@ -140,6 +200,8 @@
                         style="@style/fill_form_edit_text"/>
 
                 </LinearLayout>
+
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
