--- a/app/src/main/res/layout/activity_select_gender.xml
+++ b/app/src/main/res/layout/activity_select_gender.xml
@@ -1,60 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/select_gender_gradient_boy">
+    android:background="@drawable/select_gender_gradient_boy"
+    android:fillViewport="true"
+    android:paddingVertical="50dp"
+    android:id="@+id/view"
+    tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        style="@style/gender_heading_textView"
-        android:text="Select your gender"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
 
-    <Button
-        android:id="@+id/button"
-        style="@style/gender_confirm_button"
-        android:layout_marginBottom="80dp"
-        android:text="confirm"
-        app:backgroundTint="#00FFFFFF"
-        app:backgroundTintMode="src_over"
-        app:iconTint="#00FFFFFF"
-        app:iconTintMode="src_over"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+            android:id="@+id/textView"
+            style="@style/gender_heading_textView"
+            android:layout_width="0dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="4dp"
+            android:gravity="center"
+            android:text="Select your gender"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
-        android:id="@+id/men_imageView"
-        style="@style/gender_select_icons"
-        android:layout_marginEnd="184dp"
-        android:layout_marginRight="184dp"
-        android:scaleType="centerInside"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.495"
-        app:srcCompat="@drawable/ic_man_silhouette"
-        app:tint="@android:color/white"
-        tools:ignore="MissingConstraints,VectorDrawableCompat" />
+        <LinearLayout
+            android:id="@+id/genders"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            tools:ignore="MissingConstraints">
 
-    <ImageButton
-        android:id="@+id/women_ImageButton"
-        style="@style/gender_select_icons"
-        android:layout_marginStart="168dp"
-        android:layout_marginLeft="168dp"
-        android:scaleType="centerInside"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.495"
-        app:srcCompat="@drawable/ic_woman"
-        app:tint="@android:color/white"
-        tools:ignore="MissingConstraints,VectorDrawableCompat" />
+            <ImageButton
+                android:id="@+id/men_imageView"
+                style="@style/gender_select_icons"
+                android:layout_weight="1"
+                android:scaleType="centerInside"
+                app:srcCompat="@drawable/ic_man_silhouette"
+                app:tint="@android:color/white"
+                tools:ignore="MissingConstraints,VectorDrawableCompat" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageButton
+                android:id="@+id/women_ImageButton"
+                style="@style/gender_select_icons"
+                android:layout_weight="1"
+                android:scaleType="centerInside"
+                app:srcCompat="@drawable/ic_woman"
+                app:tint="@android:color/white"
+                tools:ignore="MissingConstraints,VectorDrawableCompat" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/button"
+            style="@style/gender_confirm_button"
+            android:layout_marginTop="100dp"
+            android:text="confirm"
+            app:backgroundTint="#00FFFFFF"
+            app:backgroundTintMode="src_over"
+            app:iconTint="#00FFFFFF"
+            app:iconTintMode="src_over"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/genders" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
