--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -7,110 +8,117 @@
     android:padding="16dp"
     android:layout_height="fill_parent">
 
+    <RelativeLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:padding="16dp"
+        android:layout_height="fill_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/firstInfo"
-        android:weightSum="2">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_weight="2"
-            android:orientation="vertical"
-            android:layout_height="wrap_content">
-
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:id="@+id/firstInfo"
+            android:weightSum="2">
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
+                android:layout_weight="2"
+                android:orientation="vertical"
+                android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/nomination_heading"
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:fontFamily="@font/nunito_semibold"
-                    android:text="................."
-                    android:textColor="@color/black"
-                    android:textSize="33dp" />
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:id="@+id/nomination_heading"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:fontFamily="@font/nunito_semibold"
+                        android:text="................."
+                        android:textColor="@color/black"
+                        android:textSize="33dp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:layout_weight="1"
+                    android:gravity="right">
+
+                    <TextView
+                        android:id="@+id/nomination_age"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:fontFamily="@font/nunito_semibold"
+                        android:paddingBottom="4dp"
+                        android:text="......"
+                        android:textColor="@color/black"
+                        android:textSize="16dp" />
+
+                </LinearLayout>
+
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
+            <ImageButton
+                android:id="@+id/settings"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_vertical"
                 android:layout_weight="1"
-                android:gravity="right">
-
-                <TextView
-                    android:id="@+id/nomination_age"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:fontFamily="@font/nunito_semibold"
-                    android:paddingBottom="4dp"
-                    android:text="......"
-                    android:textColor="@color/black"
-                    android:textSize="16dp" />
-
-            </LinearLayout>
-
+                android:background="@color/white"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_baseline_settings_24" />
 
         </LinearLayout>
 
+        <ImageView
+            android:id="@+id/profilePhoto"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/firstInfo"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="17dp"
+            android:adjustViewBounds="true"
+            app:srcCompat="@drawable/depositphotos_134255710_stock_illustration_avatar_vector_male_profile_gray__1_"
+            tools:ignore="VectorDrawableCompat" />
+
+        <TextView
+            android:id="@+id/about"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/profilePhoto"
+            android:layout_alignStart="@+id/profilePhoto"
+            android:layout_alignLeft="@+id/profilePhoto"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="16dp"
+            android:text=".................................................."
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
         <ImageButton
-            android:id="@+id/settings"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
+            android:id="@+id/logout"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_below="@+id/about"
+            android:layout_alignStart="@+id/about"
+            android:layout_alignLeft="@+id/about"
+            android:layout_marginTop="45dp"
+            android:scaleType="fitXY"
             android:background="@color/white"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_baseline_settings_24" />
-
-    </LinearLayout>
-
-    <ImageView
-        android:id="@+id/profilePhoto"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/firstInfo"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="17dp"
-        android:adjustViewBounds="true"
-        app:srcCompat="@drawable/depositphotos_134255710_stock_illustration_avatar_vector_male_profile_gray__1_"
-        tools:ignore="VectorDrawableCompat" />
-
-    <TextView
-        android:id="@+id/about"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/profilePhoto"
-        android:layout_alignStart="@+id/profilePhoto"
-        android:layout_alignLeft="@+id/profilePhoto"
-        android:layout_marginStart="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="16dp"
-        android:text=".................................................."
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageButton
-        android:id="@+id/logout"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_below="@+id/about"
-        android:layout_alignStart="@+id/about"
-        android:layout_alignLeft="@+id/about"
-        android:layout_marginTop="45dp"
-        android:scaleType="fitXY"
-        android:background="@color/white"
-        app:srcCompat="@drawable/ic_logout"
-        tools:ignore="VectorDrawableCompat" />
+            app:srcCompat="@drawable/ic_logout"
+            tools:ignore="VectorDrawableCompat" />
 
 
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
